--- a/css/work.css
+++ b/css/work.css
@@ -27,7 +27,7 @@ a{
     width: 20%;
     height: 100vh;
     background: #F2CF1D;
-    /* box-shadow: 2px 2px 6px rgba(242, 207, 29, 0.4); */
+    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
     z-index: 100;
     min-width: 155px;
 }
