--- a/css/index.css
+++ b/css/index.css
@@ -8,7 +8,7 @@ body{
     font-family: "Noto sans KR", Helvetica, sans-serif;
     overflow-x: scroll;
     overflow-y: scroll;
-    min-width: 765px;
+    min-width: 750px;
     scroll-behavior: smooth;
 }
 ul{
@@ -22,47 +22,54 @@ a{
     width: 100%;
 }
 #left{
-    position: fixed;
     float: left;
-    width: 20%;
-    height: 100vh;
+    width: 100%;
+    height: 100px;
     background: #F2CF1D;
     box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
     z-index: 100;
-    min-width: 155px;
+    position: relative;
+    min-width: 900px;
 }
 #left h1{
+    display: block;
+    width: 135px;
     font-family: 'Lobster', cursive;
-    text-align: center;
+    text-align: left;
     font-size: 40px;
+    line-height: 100px;
+    margin-left: 30px;
     font-weight: normal;
-    background: #F2CF1D;
-    padding: 60px 0;
 }
 #left h1 a{
     color: #18298C;
 }
 #menu{
     text-align: center;
+    position: absolute;
+    top: 20px;
+    left: 300px;
 }
 #menu > li{
     /* outline: 1px solid blue; */
     line-height: 70px;
+    float: left;
+    width: 150px;
     /* border-top: 1px solid rgb(253, 235, 142);
     border-bottom: 1px solid rgb(168, 142, 9); */
-}
-#menu > li:last-child{
-    border-bottom: none;
 }
 #menu > li > a{
     font-size: 18px;
     color: #18298C;
     font-weight: bold;
+    padding: 20px 0;
 }
 #menu .sub_menu{
     height: 0;
     overflow: hidden;
     transition: .4s;
+    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
+    margin-top: 10px;
 }
 #menu .sub_menu > li{
     line-height: 70px;
@@ -71,50 +78,25 @@ a{
 #menu .sub_menu > li a{
     color: #18298C;
     font-weight: 18px;
+    padding: 20px 30px;
+    text-align: center;
 }
 #menu .sub_menu > li:hover{
-    background: rgb(216, 180, 3);
+    background: #E6C005;
 }
 #menu > li{
     transition: 0.4s;
 }
-#menu > li:hover{
+/* #menu > li:hover{
     background: #E6C005;
-}
+} */
 #menu > li:hover .sub_menu{
     height: 210px;
-    background: #E6C005;
-}
-#sns{
-    width: 100%;
-    position: absolute;
-    bottom: 17px;
-}
-#sns li{
-    text-align: center;
-    display: inline-block;
-    width: 100%;
-    font-size: 30px;
-    padding: 10px 0;
-}
-#sns li:hover{
-    background: #fff;
-}
-#sns li a{
-    color: #333;
-}
-#sns li:first-child a:hover{
-    color: #4064ad;
-}
-#sns li:nth-child(2) a:hover{
-    color: #d72e71;
-}
-#sns li:nth-child(3) a:hover{
-    color: #00a7e7;
+    background: #F2CF1D;
 }
 #right{
     float: right;
-    width: 80%;
+    width: 100%;
     text-align: center;
     overflow: hidden;
     position: relative;
@@ -179,7 +161,7 @@ a{
 #right #photo{
     /* outline: 1px solid red; */
     text-align: center;
-    padding-top: 20px;
+    padding-top: 60px;
 }
 #photo img{
     margin-bottom: 20px;
@@ -206,7 +188,7 @@ a{
     margin-top: 100px;
 }
 .circle{
-    width: 33%;
+    width: 25%;
     float: left;
 }
 .circle svg{
@@ -240,6 +222,10 @@ a{
     /* stroke-dashoffset: calc(440 - (440 * 75) / 100); */
     stroke: darkgray;
 }
+.circle:nth-child(4) svg circle:nth-child(2){
+    /* stroke-dashoffset: calc(440 - (440 * 75) / 100); */
+    stroke: pink;
+}
 .circle h1{
     margin-top: 10px;
     font-size: 24px;
@@ -250,7 +236,7 @@ a{
 }
 #work{
     float: right;
-    width: 80%;
+    width: 100%;
     text-align: center;
     overflow: hidden;
     position: relative;
@@ -298,6 +284,11 @@ a{
     vertical-align: middle;
     width: 100%;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.6);
+    border-radius: 15px;
+    transition: 0.5s;
+}
+#work .col img:hover{
+    transform: scale(1.02);
 }
 @media screen and (max-width: 1300px){
     #work .col{
@@ -305,7 +296,7 @@ a{
         max-width: 50%;
     }
 }
-@media screen and (max-width: 900px){
+@media screen and (max-width: 800px){
     #work .col{
         flex: 100%;
         max-width: 100%;
