--- a/css/index.css
+++ b/css/index.css
@@ -8,7 +8,6 @@ body{
     font-family: "Noto sans KR", Helvetica, sans-serif;
     overflow-x: scroll;
     overflow-y: scroll;
-    min-width: 750px;
     scroll-behavior: smooth;
 }
 ul{
@@ -22,54 +21,48 @@ a{
     width: 100%;
 }
 #left{
+    position: fixed;
     float: left;
-    width: 100%;
-    height: 100px;
+    width: 200px;
+    height: 100vh;
     background: #F2CF1D;
     box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
     z-index: 100;
-    position: relative;
-    min-width: 900px;
+    min-width: 155px;
+    transition: 0.5s;
 }
 #left h1{
-    display: block;
-    width: 135px;
     font-family: 'Lobster', cursive;
-    text-align: left;
+    text-align: center;
     font-size: 40px;
-    line-height: 100px;
-    margin-left: 30px;
     font-weight: normal;
+    background: #F2CF1D;
+    padding: 60px 0;
 }
 #left h1 a{
     color: #18298C;
 }
 #menu{
     text-align: center;
-    position: absolute;
-    top: 20px;
-    left: 300px;
 }
 #menu > li{
     /* outline: 1px solid blue; */
     line-height: 70px;
-    float: left;
-    width: 150px;
     /* border-top: 1px solid rgb(253, 235, 142);
     border-bottom: 1px solid rgb(168, 142, 9); */
+}
+#menu > li:last-child{
+    border-bottom: none;
 }
 #menu > li > a{
     font-size: 18px;
     color: #18298C;
     font-weight: bold;
-    padding: 20px 0;
 }
 #menu .sub_menu{
     height: 0;
     overflow: hidden;
     transition: .4s;
-    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
-    margin-top: 10px;
 }
 #menu .sub_menu > li{
     line-height: 70px;
@@ -78,25 +71,51 @@ a{
 #menu .sub_menu > li a{
     color: #18298C;
     font-weight: 18px;
-    padding: 20px 30px;
-    text-align: center;
 }
 #menu .sub_menu > li:hover{
-    background: #E6C005;
+    background: rgb(216, 180, 3);
 }
 #menu > li{
     transition: 0.4s;
 }
-/* #menu > li:hover{
+#menu > li:hover{
     background: #E6C005;
-} */
+}
 #menu > li:hover .sub_menu{
     height: 210px;
-    background: #F2CF1D;
+    background: #E6C005;
+}
+#sns{
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+}
+#sns li{
+    line-height: 150px;
+    width: 32.1%;
+    height: 150px;
+    display: inline-block;
+    text-align: center;
+    font-size: 30px;
+}
+#sns li:hover{
+    background: #fff;
+}
+#sns li a{
+    color: #333;
+}
+#sns li:first-child a:hover{
+    color: #4064ad;
+}
+#sns li:nth-child(2) a:hover{
+    color: #d72e71;
+}
+#sns li:nth-child(3) a:hover{
+    color: #00a7e7;
 }
 #right{
     float: right;
-    width: 100%;
+    width: calc(100% - 200px);
     text-align: center;
     overflow: hidden;
     position: relative;
@@ -104,6 +123,7 @@ a{
     /* background: rgba(242, 159, 5, 0.1); */
     min-height: 100vh;
     margin-bottom: 150px;
+    transition: 0.5;
 }
 #right .typing-txt{
     display: none;
@@ -161,7 +181,7 @@ a{
 #right #photo{
     /* outline: 1px solid red; */
     text-align: center;
-    padding-top: 60px;
+    padding-top: 20px;
 }
 #photo img{
     margin-bottom: 20px;
@@ -224,7 +244,7 @@ a{
 }
 .circle:nth-child(4) svg circle:nth-child(2){
     /* stroke-dashoffset: calc(440 - (440 * 75) / 100); */
-    stroke: pink;
+    stroke: palevioletred;
 }
 .circle h1{
     margin-top: 10px;
@@ -236,7 +256,7 @@ a{
 }
 #work{
     float: right;
-    width: 100%;
+    width: calc(100% - 200px);
     text-align: center;
     overflow: hidden;
     position: relative;
@@ -284,11 +304,6 @@ a{
     vertical-align: middle;
     width: 100%;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.6);
-    border-radius: 15px;
-    transition: 0.5s;
-}
-#work .col img:hover{
-    transform: scale(1.02);
 }
 @media screen and (max-width: 1300px){
     #work .col{
@@ -296,9 +311,55 @@ a{
         max-width: 50%;
     }
 }
-@media screen and (max-width: 800px){
-    #work .col{
-        flex: 100%;
-        max-width: 100%;
+@media screen and (max-width: 1000px){
+    body{
+        min-width: 766px;
+    }
+    #left{
+        width: 100%;
+        height: 100px;
+        position: relative;
+        box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
+    }
+    #left h1{
+        text-align: left;
+        display: block;
+        padding: 30px;
+    }
+    #menu{
+        position: absolute;
+        top: 20px;
+        right: 0;
+    }
+    #menu li{
+        float: left;
+        width: 120px;
+    }
+    #menu li a{
+        font-size: 18px;
+    }
+    #menu > li:hover{
+        background: #F2CF1D;
+    }
+    #menu .sub_menu{
+        margin-top: 20px;
+    }
+    #menu .sub_menu > li > a{
+        font-size: 15px;
+        padding: 10px 20px;
+    }
+    #sns{
+        display: none;
+    }
+    #right{
+        width: 100%;
+        margin-top: 10px;
+    }
+    #work{
+        width: 100%;
+    }
+    .circle{
+        width: 50%;
+        margin-bottom: 60px;
     }
 }
