--- a/css/index.css
+++ b/css/index.css
@@ -316,9 +316,10 @@ a{
         min-width: 766px;
     }
     #left{
+        position: fixed;
+        /* outline: 2px solid red; */
         width: 100%;
-        height: 100px;
-        position: relative;
+        height: 110px;
         box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
     }
     #left h1{
