--- a/css/work.css
+++ b/css/work.css
@@ -159,3 +159,49 @@ a{
 #work p a:hover{
     text-decoration: underline;
 }
+@media screen and (max-width: 1000px){
+    body{
+        min-width: 766px;
+    }
+    #left{
+        position: fixed;
+        /* outline: 2px solid red; */
+        width: 100%;
+        height: 110px;
+        box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
+    }
+    #left h1{
+        text-align: left;
+        display: block;
+        padding: 30px;
+    }
+    #menu{
+        position: absolute;
+        top: 20px;
+        right: 0;
+    }
+    #menu li{
+        float: left;
+        width: 120px;
+    }
+    #menu li a{
+        font-size: 18px;
+    }
+    #menu > li:hover{
+        background: #F2CF1D;
+    }
+    #menu .sub_menu{
+        margin-top: 20px;
+        box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
+    }
+    #menu .sub_menu > li > a{
+        font-size: 15px;
+    }
+    #sns{
+        display: none;
+    }
+    #right{
+        width: 100%;
+        margin-top: 100px;
+    }
+}
