--- a/css/work.css
+++ b/css/work.css
@@ -24,7 +24,7 @@ a{
 #left{
     position: fixed;
     float: left;
-    width: 20%;
+    width: 200px;
     height: 100vh;
     background: #F2CF1D;
     box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
@@ -115,7 +115,7 @@ a{
 
 #right{
     float: right;
-    width: 80%;
+    width: calc(100% - 200px);
     text-align: center;
     overflow: hidden;
     position: relative;
