--- a/css/index.css
+++ b/css/index.css
@@ -320,6 +320,7 @@ a{
         width: 100%;
         height: 110px;
         box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
+        min-width: 700px;
     }
     #left h1{
         text-align: left;
