--- a/css/work.css
+++ b/css/work.css
@@ -168,6 +168,7 @@ a{
         /* outline: 2px solid red; */
         width: 100%;
         height: 110px;
+        min-width: 700px;
         box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
     }
     #left h1{
