--- a/css/work.css
+++ b/css/work.css
@@ -88,14 +88,15 @@ a{
 #sns{
     width: 100%;
     position: absolute;
-    bottom: 17px;
+    bottom: 0;
 }
 #sns li{
-    text-align: center;
+    line-height: 150px;
+    width: 32.1%;
+    height: 150px;
     display: inline-block;
-    width: 100%;
+    text-align: center;
     font-size: 30px;
-    padding: 10px 0;
 }
 #sns li:hover{
     background: #fff;
@@ -112,7 +113,6 @@ a{
 #sns li:nth-child(3) a:hover{
     color: #00a7e7;
 }
-
 #right{
     float: right;
     width: calc(100% - 200px);
