--- a/css/index.css
+++ b/css/index.css
@@ -122,7 +122,7 @@ a{
     /* background: rgba(242, 159, 5, 0.1); */
     min-height: 100vh;
     margin-bottom: 150px;
-    transition: 0.5;
+    transition: 0.5s;
 }
 #right .typing-txt{
     display: none;
