--- a/css/index.css
+++ b/css/index.css
@@ -317,9 +317,9 @@ a{
         max-width: 50%;
     }
 }
-@media screen and (max-width: 1000px){
+@media screen and (max-width: 766px){
     body{
-        min-width: 766px;
+        min-width: 500px;
     }
     #left{
         position: fixed;
@@ -327,7 +327,7 @@ a{
         width: 100%;
         height: 110px;
         box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
-        min-width: 700px;
+        min-width: 500px;
     }
     #left h1{
         text-align: left;
@@ -337,6 +337,7 @@ a{
     #menu{
         position: absolute;
         width: 100%;
+        min-width: 500px;
         height: 70px;
         top: 0;
         right: 0;
@@ -381,6 +382,7 @@ a{
     }
     #right{
         width: 100%;
+        min-width: 500px;
         margin-top: 10px;
     }
     #work{
@@ -390,10 +392,18 @@ a{
         width: 50%;
         margin-bottom: 60px;
     }
-}
-@media screen and (max-width: 800px){
     #work .col{
         flex: 100%;
         max-width: 100%;
+    }
+    #right #box h1{
+        font-size: 50px;
+        margin-top: 250px;
+    }
+    #right .typing{
+        font-size: 50px;
+    }
+    #right #change{
+        margin-top: 180px;
     }
 }
