--- a/css/work.css
+++ b/css/work.css
@@ -166,9 +166,13 @@ a{
 #work p a:hover{
     text-decoration: underline;
 }
-@media screen and (max-width: 1000px){
+#back{
+    display: none;
+}
+@media screen and (max-width: 766px){
     body{
-        min-width: 766px;
+        width: 100%;
+        min-width: 500px;
     }
     #left{
         position: fixed;
@@ -176,7 +180,7 @@ a{
         width: 100%;
         height: 110px;
         box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
-        min-width: 700px;
+        min-width: 500px;
     }
     #left h1{
         text-align: left;
@@ -186,6 +190,7 @@ a{
     #menu{
         position: absolute;
         width: 100%;
+        min-width: 500px;
         height: 70px;
         top: 0;
         right: 0;
@@ -230,9 +235,24 @@ a{
     }
     #right{
         width: 100%;
+        min-width: 500px;
         margin-top: 100px;
     }
     #work{
         width: 100%;
+    }
+    #back{
+        display: block;
+        position: fixed;
+        right: 30px;
+        bottom: 30px;
+        width: 70px;
+        height: 70px;
+        background: #F2CF1D;
+        border-radius: 50%;
+        line-height: 70px;
+        font-size: 30px;
+        color: #000;
+        box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
     }
 }
